--- a/charts/zwavejs2mqtt/templates/route.yaml
+++ b/charts/zwavejs2mqtt/templates/route.yaml
@@ -13,7 +13,7 @@ spec:
     name: {{ .Release.Name }}
     weight: 100
   port:
-    targetPort: http
+    targetPort: main
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
