--- a/charts/zwavejs2mqtt/values.yaml
+++ b/charts/zwavejs2mqtt/values.yaml
@@ -54,6 +54,7 @@ app-template:
       runAsGroup: 0
       fsGroup: 0
       fsGroupChangePolicy: "OnRootMismatch"
+      privileged: true
 
   persistence:
     config:
@@ -63,5 +64,5 @@ app-template:
 
     dev:
       enabled: true
-      hostPath: /dev
+      hostPath: /dev/serial/by-id/usb-0658_0200-if00
       type: hostPath
