--- a/charts/zwavejs2mqtt/templates/route.yaml
+++ b/charts/zwavejs2mqtt/templates/route.yaml
@@ -10,7 +10,7 @@ spec:
   path: /
   to:
     kind: Service
-    name: {{ .Release.Name }}
+    name: {{ .Release.Name }}-main
     weight: 100
   port:
     targetPort: main
