move things around on the hajimari screen

--- a/charts/node-red/values.yaml
+++ b/charts/node-red/values.yaml
@@ -9,7 +9,7 @@ application:
   group: Automation
   icon: simple-icons:nodered
   image: https://raw.githubusercontent.com/node-red/node-red.github.io/master/images/node-red.png
-  description: "A flow-based development tool for visual programming."
+  description: "A flow-based development tool."
   port: 1880
 
 storage:
