--- a/roles/base-cluster/templates/hajimari.yaml
+++ b/roles/base-cluster/templates/hajimari.yaml
@@ -24,6 +24,8 @@ spec:
           value: {{ .Values.cluster.admin_email }}
         - name: app-template.controllers.main.containers.main.env.TZ
           value: {{ .Values.cluster.timezone }}
+        - name: app-template.controllers.main.containers.main.env.LOG_LEVEL
+          value: DEBUG
   syncPolicy:
     automated:
       prune: true
