--- a/roles/ullberg-custom/templates/hajimari-bookmarks.yaml
+++ b/roles/ullberg-custom/templates/hajimari-bookmarks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   name: ZoHo Mail
   group: Communication
-  icon: email
+  icon: mail
   url: https://mail.zoho.com/
   info: ZoHo E-Mail
   location: 100
