--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -8,6 +8,7 @@ application:
   name: App
   group: Media
   icon: simple-icons:app
+  iconColor: ""
   image: https://raw.githubusercontent.com/app/app/develop/Logo/400.png
   description: "A tool for managing stuff."
   port: 8080
