--- a/roles/home-automation/templates/home-assistant.yaml
+++ b/roles/home-automation/templates/home-assistant.yaml
@@ -38,6 +38,8 @@ spec:
           value: Home Automation
         - name: application.icon
           value: mdi:home-assistant
+        - name: application.iconColor
+          value: "#0288d1"
         - name: application.image
           value: 'https://upload.wikimedia.org/wikipedia/commons/6/6e/Home_Assistant_Logo.svg'
         - name: application.description
