--- a/charts/clusterplex/templates/clusterplex-pms.yaml
+++ b/charts/clusterplex/templates/clusterplex-pms.yaml
@@ -81,6 +81,7 @@ spec:
           requests:
             cpu: 300m
             memory: 256Mi
+            gpu.intel.com/i915: "1"
           limits:
             cpu: 2000m
             memory: 512Mi
