--- a/charts/clusterplex/templates/clusterplex-worker.yaml
+++ b/charts/clusterplex/templates/clusterplex-worker.yaml
@@ -40,7 +40,8 @@ spec:
             weight: 50
       containers:
       - name: plex-worker
-        image: lscr.io/linuxserver/plex:latest
+        # renovate: docker-image
+        image: lscr.io/linuxserver/plex:1.40.3 
         startupProbe:
           httpGet:
             path: /health
