RWX doesnt work with democratic-csi

--- a/charts/kubevirt-hyperconverged-instance/templates/storageprofile.yaml
+++ b/charts/kubevirt-hyperconverged-instance/templates/storageprofile.yaml
@@ -12,6 +12,6 @@ metadata:
 spec:
   claimPropertySets:
     - accessModes:
-      - ReadWriteMany
+      - ReadWriteOnce
       volumeMode: 
         Filesystem
