--- a/clusters/openshift.ullberg.family/values.yaml
+++ b/clusters/openshift.ullberg.family/values.yaml
@@ -42,6 +42,11 @@ backup:
     server: my-nas
     path: /my-backups
 
+nfs-subdir-external-provisioner:
+  nfs:
+    server: my-nas
+    path: /my/pvcs
+
 network:
   lan:
     defaultGW: 192.168.0.1
