--- a/clusters/openshift.ullberg.family/templates/base-cluster.yaml
+++ b/clusters/openshift.ullberg.family/templates/base-cluster.yaml
@@ -61,10 +61,10 @@ spec:
           value: {{ .Values.backup.nfs.path }}
           
         {{ $nfs := index .Values "nfs-subdir-external-provisioner" }}
-        - name: $nfs.nfs.server
-          value: {{ .Values.backup.nfs.server }}
-        - name: $nfs.nfs.path
-          value: {{ .Values.backup.nfs.path }}
+        - name: nfs-subdir-external-provisioner.nfs.server
+          value: {{ $nfs.nfs.server }}
+        - name: nfs-subdir-external-provisioner.nfs.path
+          value: {{ $nfs.nfs.path }}
 
         - name: network.lan.defaultGW
           value: {{ .Values.network.lan.defaultGW }}
