--- a/roles/base-cluster/templates/startpunkt.yaml
+++ b/roles/base-cluster/templates/startpunkt.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hajimari
+  name: startpunkt
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: hajimari
+    namespace: startpunkt
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/hajimari
+    path: charts/startpunkt
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
