--- a/charts/startpunkt/templates/rbac.yaml
+++ b/charts/startpunkt/templates/rbac.yaml
@@ -10,6 +10,9 @@ rules:
 - apiGroups: ["hajimari.io"]
   resources: ["applications", "bookmarks"]
   verbs: ["get", "list"]
+- apiGroups: ["startpunkt.ullberg.us"]
+  resources: ["applications", "bookmarks"]
+  verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
