--- a/charts/startpunkt/templates/rbac.yaml
+++ b/charts/startpunkt/templates/rbac.yaml
@@ -12,7 +12,7 @@ rules:
   verbs: ["get", "list"]
 - apiGroups: ["startpunkt.ullberg.us"]
   resources: ["applications", "bookmarks"]
-  verbs: ["get", "list"]
+  verbs: ["get", "list", "create", "update", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
