--- a/charts/startpunkt/values.yaml
+++ b/charts/startpunkt/values.yaml
@@ -61,18 +61,55 @@ app-template:
           readOnly: true
 
 startpunkt:
+  # Default protocol for links if not specified in the resource
+  defaultProtocol: "http"
+
+  # Default language for the web UI
+  defaultLanguage: "en-US"
+
+  # Namespace selector determines which namespaces to look for resources in
   namespaceSelector:
     any: true  # If true, look for resources in all namespaces
+    # matchNames:  # Uncomment and specify namespace names to limit the search to specific namespaces
+    #   - default
+    #   - startpunkt
 
+  # Kubernetes integration, read ingress resources
   ingress:
-    enabled: false  # If true, enable the reading of ingress resources
+    enabled: true  # If true, enable the reading of ingress resources
+    onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
+  # OpenShift integration, read OpenShift Routes
   openshift:
-    enabled: false  # If true, enable the reading of OpenShift Route resources
+    enabled: true  # If true, enable the reading of OpenShift Route resources
+    onlyAnnotated: trfalseue  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
+  # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
-    enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
+    enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
 
+  # Istio Virtual Service integration, read Istio VirtualService resources
   istio:
     virtualservice:
-      enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
+      enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
+      onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+
+  # Web ui configuration
+  web:
+    title: "Startpunkt"  # Title of the web UI
+    githubLink:
+      enabled: true  # If true, enable the GitHub link in the web UI
+    checkForUpdates: true  # If true, check for updates and show a notification in the web UI
+    theme:
+      light:
+        bodyBgColor: "#F8F6F1"
+        bodyColor: "#696969"
+        emphasisColor: "#000000"
+        textPrimaryColor: "#4C432E"
+        textAccentColor: "#AA9A73"
+      dark:
+        bodyBgColor: "#232530"
+        bodyColor: "#696969"
+        emphasisColor: "#FAB795"
+        textPrimaryColor: "#FAB795"
+        textAccentColor: "#E95678"
