--- a/charts/satisfactory/values.yaml
+++ b/charts/satisfactory/values.yaml
@@ -28,9 +28,9 @@ app-template:
           env:
             TZ: TIMEZONE
             MAXPLAYERS: 4
-            PGID: 1000
-            PUID: 1000
-            ROOTLESS: false
+            PGID: 2000
+            PUID: 2000
+            ROOTLESS: true
             STEAMBETA: false
           probes:
             liveness:
