--- a/charts/satisfactory/values.yaml
+++ b/charts/satisfactory/values.yaml
@@ -30,7 +30,7 @@ app-template:
             MAXPLAYERS: 4
             PGID: 2000
             PUID: 2000
-            ROOTLESS: true
+            ROOTLESS: false
             STEAMBETA: false
           probes:
             liveness:
@@ -59,6 +59,6 @@ app-template:
 
   defaultPodOptions:
     securityContext:
-      runAsUser: 2000
-      runAsGroup: 2000
-      fsGroup: 2000
+      runAsUser: 0
+      runAsGroup: 0
+      fsGroup: 0
