--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -139,24 +139,24 @@ app-template:
             tag: 1.06
             pullPolicy: Always
 
-    # opensky:
-    #   type: statefulset
-    #   strategy: RollingUpdate
-    #   annotations:
-    #     reloader.stakater.com/auto: "true"
-    #   labels:
-    #     kasten/backup: "true"
-    #     app: adsb
-    #     version: 1.0.0
-    #   containers:
-    #     opensky:
-    #       securityContext:
-    #         privileged: true
-    #       image:
-    #         # renovate: docker-image versioning=loose
-    #         repository: ghcr.io/sdr-enthusiasts/docker-opensky-network
-    #         tag: 2.1.7-1
-    #         pullPolicy: Always
+    opensky:
+      type: statefulset
+      strategy: RollingUpdate
+      annotations:
+        reloader.stakater.com/auto: "true"
+      labels:
+        kasten/backup: "true"
+        app: adsb
+        version: 1.0.0
+      containers:
+        opensky:
+          securityContext:
+            privileged: true
+          image:
+            # renovate: docker-image versioning=loose
+            repository: ghcr.io/sdr-enthusiasts/docker-opensky-network
+            tag: 2.1.7-1
+            pullPolicy: Always
 
     #  radarvirtuel:
     #   type: statefulset
